<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.fixus.towerdefense.MainWindow" >
 <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="false"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:longClickable="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:text=""
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        android:padding="25dp"
        tools:ignore="UnusedAttribute" >

        <LinearLayout
            android:id="@+id/MainMenu"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/Start_btn"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/start_button" 
                android:onClick="startAction"/>

            <Button
                android:id="@+id/Opt_btn"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/option_button" 
                android:onClick="optionAction"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/black_overlay"
            android:onClick="@string/exit_button"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/Exit_btn"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/exit_button"
                android:onClick="closeApplication" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
